<resources>
    <string name="app_name">Hillfort</string>

    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="hint_hillfortNotes">Notes</string>

    <string name="button_addHillfort">Add Hillfort</string>
    <string name="button_saveHillfort">Save Hillfort</string>

    <string name="menu_addHillfort">Add</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_save">Save Settings</string>

    <string name="menu_logout">Logout</string>

    <string name="menu_signup">Sign Up</string>
    <string name="menu_cancel">Cancel</string>
    <string name="signup_title">Sign Up</string>

    <string name="toast_enterTitle">Please Enter a title</string>
    <string name="toast_username_password">Username and password can\'t be blank!</string>
    <string name="toast_logout">Logged Out!</string>

    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>

    <string name="hint_signin_username">username</string>
    <string name="hint_signin_password">password</string>
    <string name="button_signin">Sign In</string>
    <string name="signin_title">Sign In</string>

    <string name="hint_signup_username">username</string>
    <string name="hint_signup_password">password</string>
    <string name="button_signup">Sign Up</string>

    <string name="checkbox_visited">Visited</string>
    <string name="checkbox_favorite">Favorite</string>

    <string name="hillfort_search">Search Hillforts ...</string>

    <string name="hint_settings_username">username</string>
    <string name="hint_settings_password">password</string>
    <string name="settings_hillfort_count_total">Total Hillforts</string>
    <string name="settings_hillfort_count_visited">Hillforts Visited</string>
    <string name="settings_hillfort_count_favorite">Favorites</string>

</resources>

